added categoris and fix several bugs

--- a/_config.yml
+++ b/_config.yml
@@ -1,36 +1,32 @@
 #-------------------------------
 # General Site Settings
-
-title: Parsa | Portfolio Jekyll Template
-logo: logo.png # You can add own logo
-description: # Add your awesome description
 baseurl: "" # The subpath of your site, e.g. /blog
 url: "" # The base hostname & protocol for your site, e.g. http://example.com
 
+title: Parsa | Portfolio Jekyll Template
+logo: /assets/images/logo.png # You can add own logo
+description: # Add your awesome description
+copyright: Copyright 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)
 # Preloader
 preloader: true # To disable preloader change value to false
 
 menu:
-  - url: /
-    name: Home
-  - url: /about/
-    name: About
-  - url: /categories/
-    name: Categories
-  - url: /contact/
-    name: Contact
+  - name: Home
+    url: /
+  - name: About
+    url: /about/
+  - name: Contact
+    url: /contact/
 
 # *** NOTE ***
 # You can add submenus. For example:
 
 #  menu:
-#  - url: /
-#    name: Home
-#  - url: /travel/
-#    name: Travel
-#     submenu:
-#      - url: /peru/
-#        name: Peru
+#  - name: Home
+#    url: /
+#    submenu:
+#     - name: Peru
+#       url: /peru/
 # ----------------------------------
 
 layout_home_page: true # Homepage layout ( two layout is available, you can set the another layout by change the value of layout_home_page "true" to "false")
@@ -41,7 +37,7 @@ featured-post-slider: true # You can enable or disable the featured-post-slider 
 # Hero Section
 hero:
   hero-subtitle: I’m a Freelance Interactive Art Director based in France. Focusing across branding and identity, digital and print.
-  hero-banner: banner-img.png # Add your banner image '/assets/images/'
+  hero-banner: /assets/images/banner-img.png # Add your banner image '/assets/images/'
 
 #-------------------------------
 # Author Settings
@@ -58,7 +54,7 @@ contact:
     street: 6 rip carl Avenue CA 90733
 
 # Contact Form
-contact-form: example@ymail.com
+contact-form: example@email.com
 
 # Social links
 social:
@@ -89,6 +85,7 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll/tagging
+  - jekyll-archives
 
 paginate: 10
 paginate_path: "/page/:num"
@@ -107,6 +104,13 @@ include:
 tag_page_dir:         tag
 tag_page_layout:      tag_page
 tag_permalink_style:  pretty
+
+# categories
+jekyll-archives:
+  enabled: all
+  layout: category
+  permalinks:
+    category: '/category/:name/'
 
 # Exclude from processing.
 exclude:
