--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 baseurl: "" # The subpath of your site, e.g. /blog
 url: "" # The base hostname & protocol for your site, e.g. http://example.com
 
-title: Parsa | Portfolio Jekyll Template
+title: OOBr 
 logo: /assets/images/logo.png # You can add own logo
 description: # Add your awesome description
 copyright: Copyright 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)
@@ -11,11 +11,11 @@ copyright: Copyright 2020 Designed by [Themefisher](https://themefisher.com) & D
 preloader: true # To disable preloader change value to false
 
 menu:
-  - name: Home
+  - name: Início
     url: /
-  - name: About
+  - name: Sobre
     url: /about/
-  - name: Contact
+  - name: Contato
     url: /contact/
 
 # *** NOTE ***
@@ -36,32 +36,27 @@ featured-post-slider: true # You can enable or disable the featured-post-slider 
 #-------------------------------
 # Hero Section
 hero:
-  hero-subtitle: I’m a Freelance Interactive Art Director based in France. Focusing across branding and identity, digital and print.
+  hero-subtitle: teste
   hero-banner: /assets/images/banner-img.png # Add your banner image '/assets/images/'
 
 #-------------------------------
 # Author Settings
 author:
-  name: Jhon Abraham
+  name: OOBr
 
 #-------------------------------
 # Contact Info
 contact:
-  email: example@ymail.com
-  phone: +90 000 333 22
-  address:
-    city: Sydney
-    street: 6 rip carl Avenue CA 90733
+  email: observatorioobstetricobr@gmail.com
 
 # Contact Form
-contact-form: example@email.com
+contact-form: observatorioobstetricobr@gmail.com
 
 # Social links
 social:
-- {icon: "ti-facebook", link: "#"}
-- {icon: "ti-twitter-alt", link: "#"}
-- {icon: "ti-linkedin", link: "#"}
-- {icon: "ti-github", link: "#"}
+- {icon: "ti-twitter-alt", link: "https://twitter.com/observatorioobr"}
+- {icon: "ti-youtube", link: "https://www.youtube.com/channel/UCp4k0g_6yP-S8G2DU6_lSeQ"}
+- {icon: "ti-instagram", link: "https://www.instagram.com/observatorioobr/"}
 
 #-------------------------------
 # Comment Section (Disqus)
@@ -80,6 +75,7 @@ google-analytics: # Add your identifier. For example UA-99631805-1.
 #-------------------------------
 # Build settings
 markdown: kramdown
+syntax_highlighter: rouge
 permalink: pretty
 plugins:
   - jekyll-paginate
