Let's get it started!
I hope....

--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 ---
 #-------------------------------
 # General Site Settings
-baseurl: "" # The subpath of your site, e.g. /blog
-url: "" # The base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/blog" # The subpath of your site, e.g. /blog
+url: "https://ChrisBlauvelt.github.io/Techie" # The base hostname & protocol for your site, e.g. http://example.com
 
-title: Parsa | Portfolio Jekyll Template
-logo: /assets/images/logo.png # You can add own logo
-description: # Add your awesome description
+title: TechieNeighbor | Your friendly neighborhood techie for hire!
+logo: /assets/images/logo-FINAL.jpg # You can add own logo
+description: Offload all of your tedious tech problems onto me, Chris Blauvelt, your TechieNeighbor that will comprehensively address the IT needs of home and small business owners throughout Gwinett and Fulton! # Add your awesome description
 copyright: Copyright 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)
 # Preloader
 preloader: true # To disable preloader change value to false
@@ -30,6 +30,7 @@ menu:
 #       url: /peru/
 # ----------------------------------
 
+
 layout_home_page: true # Homepage layout ( two layout is available, you can set the another layout by change the value of layout_home_page "true" to "false")
 
 featured-post-slider: true # You can enable or disable the featured-post-slider using true or false values.
@@ -37,40 +38,38 @@ featured-post-slider: true # You can enable or disable the featured-post-slider 
 #-------------------------------
 # Hero Section
 hero:
-  hero-subtitle: I’m a Freelance Interactive Art Director based in France. Focusing across branding and identity, digital and print.
+  hero-subtitle: I'm a systems administrator by day with an extreme love for all things technical and electronic! I will always strive to honor my core business tenants of transparency and comprehensive solutions that leave my customers satisfied in the long-term. 
   hero-banner: /assets/images/banner-img.png # Add your banner image '/assets/images/'
 
 #-------------------------------
 # Author Settings
 author:
-  name: Jhon Abraham
+  name: Christopher Blauvelt
 
 #-------------------------------
 # Contact Info
 contact:
-  email: example@ymail.com
-  phone: +90 000 333 22
+  email: admin@blauv.net
+  phone: +1 (470) 665-4100
   address:
-    city: Sydney
-    street: 6 rip carl Avenue CA 90733
+    city: Suwanee
+    street: Right down the street (:
 
 # Contact Form
-contact-form: example@email.com
+contact-form: admin@blauv.net
 
 # Social links
 social:
-  - { icon: "ti-facebook", link: "#" }
-  - { icon: "ti-twitter-alt", link: "#" }
-  - { icon: "ti-linkedin", link: "#" }
-  - { icon: "ti-github", link: "#" }
+  - { icon: "ti-linkedin", link: "https://www.linkedin.com/in/christopherblauveltjr/" }
+  - { icon: "ti-github", link: "https://github.com/ChrisBlauvelt/" }
 
 #-------------------------------
 # Comment Section (Disqus)
-disqus-identifier: # Add your shortname for Disqus Comment. For example mr-brown
+disqus-identifier: TechieAdmin # Add your shortname for Disqus Comment. For example mr-brown
 
 #-------------------------------
 # Instagram Feed
-instafeed: true # To enable the instafeed, use the value true. To turn off use the value false.
+instafeed: false # To enable the instafeed, use the value true. To turn off use the value false.
 userID: 4044026246
 accessToken: 4044026246.1677ed0.8896752506ed4402a0519d23b8f50a17
 
